# Snooker-Shots-Detector

./: .gitignore  README.md  main prompt.txt  pyproject.toml  requirements.txt  run_server.py  start.bat
annotation/: SPEC.md
apps/: __init__.py
apps/api/: main.py
apps/web/: index.html  review.html
apps/web/static/: app.js  review.js  styles.css
configs/: default.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.yml
docs/: api.md  architecture.md  benchmark_report_template.md  troubleshooting.md  windows_setup.md  workflow_example.md
scripts/: inspect_shot_ends.py  make_demo_video.py  run_api.ps1  run_tests.ps1
snooker_ai/: __init__.py  cli.py  config.py  types.py
snooker_ai/audio/: __init__.py  features.py
snooker_ai/evaluation/: __init__.py  metrics.py
snooker_ai/event_fusion/: __init__.py  ball_stop.py  strike.py
snooker_ai/ingestion/: __init__.py  probe.py  proxy.py
snooker_ai/jobs/: __init__.py  store.py
snooker_ai/motion/: __init__.py  camera.py  residual.py
snooker_ai/object_detection/: __init__.py  detector.py
snooker_ai/pipeline/: __init__.py  analyzer.py
snooker_ai/rendering/: __init__.py  exporter.py  preprocessor.py
snooker_ai/replay_detection/: __init__.py  detector.py
snooker_ai/scene_detection/: __init__.py  detector.py  view_classifier.py
snooker_ai/segmentation/: __init__.py  builder.py
snooker_ai/table_detection/: __init__.py  localizer.py
snooker_ai/temporal_model/: __init__.py  state_machine.py
snooker_ai/tracking/: __init__.py  tracker.py
snooker_ai/utils/: __init__.py  acceleration.py  ffmpeg.py  logging.py  timebase.py
tests/: conftest.py  test_ball_stop.py  test_config.py  test_evaluation.py  test_export_api.py  test_exporter.py  test_jobs.py  test_performance_regressions.py  test_pipeline_synthetic.py  test_preprocessor.py  test_review_video.py  test_scene_classifier.py  test_strict_boundary_edges.py  test_strict_contract.py  test_strike_and_segments.py  test_table_and_motion.py  test_timebase.py  test_tracking.py
training/: dataset_config.example.yaml  train.py
